# aws-cli-plugin

./: .gitignore  fig.py  pyproject.toml  readme.md  setup.sh
.github/workflows/: build.yml  lint.yml
src/aws_cli_plugin/: __init__.py
