[project]
name = "aws-cli-plugin"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Grant Gurvis", email = "grangurv@amazon.com" }]
dependencies = [
    "awscli>=1.32.114",
]
requires-python = ">= 3.8"

[project.scripts]
aws_cli_plugin = 'aws_cli_plugin:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aws_cli_plugin"]
